@@ -5,6 +5,7 @@ Revision 0.1.9
 - Extensions added to text files, CVS attic flushed.
 - Fix to make uninitilaized pyasn1 objects failing properly on hash().
 - Fix to ObjectIdentifier initialization from unicode string.
+- Fix to CER/DER Boolean decoder - fail on non single-octet payload.
 
 Revision 0.1.8, released 22-06-2015
 -----------------------------------
